# mcpproxy-go

./: .env.example  .gitignore  .mcp.json  AGENT_DIAGNOSTIC_REPORT.md  CLAUDE.md  FAST_ACTIONS_SUMMARY.md  GROUP_ASSIGNMENT_COMPLETE_FIX_SUMMARY.md  Makefile  OBSIDIAN_VAULT_CRITICAL_REPORT.md  README.md  TRAY_STARTUP_ISSUE.md  all_tools.json  changes.md  color_monitor.sh  config-link  corruption-roots-20251019-141642.txt  corruption-roots-20251019-141722.txt  corruption-scan-20251019-141741.txt  corruption-scan-20251019-141800.txt  corruption-scan-20251019-141941.txt  corruption-scan-20251019-164244.txt  debug_group_assignment.go  debug_groups.go  debug_tray_groups.go  dev_watch.sh  dev_watch_simple.sh  fetch_tools.py  fix_colors.go  fix_colors_permanent.go  fix_mcp_servers.py  force_color_load.go  generate_test_plan.py  go.mod  go.sum  mcp.json  mcpproxy-test  modify_all_auto_disabled.py  start-mcpproxy.sh  test_color_loading.go  test_colors.go  (+12 more)
.hive-mind/: config.json  (+2 more)
agent/: .coverage  CONTEXT_COMPACTION_SUMMARY.md  INTEGRATION_PATCH.md  MIGRATION_PLAN.md  Makefile  README.md  TESTING_QUICK_REFERENCE.md  TESTING_SETUP_COMPLETE.md  pyproject.toml  pytest.ini  requirements-semantic.txt  requirements.txt  semantic_search_api.py  summarize_server_docs.py  test_capabilities.py  test_context_pruning.py  test_inspector_integration.py  test_search_graph.py  test_semantic_search.py  test_session_memory.py  test_tools.py
agent/docs/: INSPECTOR_INTEGRATION.md  SEMANTIC_SEARCH.md  SESSION_MEMORY.md
agent/mcp_agent/: cli.py
agent/tests/: README.md  __init__.py  conftest.py
(+368 files in other folders)
