[tool.poetry]
name = "mcp-agent"
version = "0.1.0"
description = "AI-powered MCP server management agent"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^0.2.0"
pydantic = "^2.5.0"
pydantic-ai = "^0.0.13"
httpx = "^0.25.0"
rich = "^13.7.0"
typer = "^0.9.0"
python-dotenv = "^1.0.0"
anthropic = "^0.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
mypy = "^1.7.0"
ruff = "^0.1.6"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
